--- a/.github/workflows/sarif.yml
+++ b/.github/workflows/sarif.yml
@@ -4,9 +4,8 @@ name: "Upload SARIF"
 # The scheduled workflow runs every at 00:00 on Sunday UTC time.
 on:
   push:
-  schedule:
-  - cron: '0 0 * * 0'
-
+    branches:
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
